--- a/style.css
+++ b/style.css
@@ -2,3 +2,102 @@
     box-sizing: border-box;
 }
 
+
+body {
+    font-family: 'Inter', sans-serif;
+    color: #4A4E74;
+    position: absolute;
+    width: 550px;
+    height: 868px;
+    left: 73px;
+    top: 960px;
+    background-color: #23252C;
+    margin: 0;
+}
+
+.container {
+    width: 317px;
+    height: 706px;
+    left: 116px;
+    top: 361px;
+    background: #F5F5F5;
+    border-radius: 10px 10px 0px 0px;
+}
+
+.headshot {
+    width: 317px;
+    left: 116px;
+    top: 44px;
+    border-radius: 10px 10px 0px 0px;
+    margin: 0;
+}
+
+.text-area {
+    text-align: center;
+}
+
+.name {
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 30px;
+    color: #2B283A;
+    
+}
+
+.title {
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 5px;
+    color: #F47D27;   
+}
+
+.portfolio {
+    font-weight: 400;
+    font-size: 10.24px;
+    line-height:20px;  
+}
+
+a:link, a:visited, a:hover, a:active{
+    text-decoration:  none;   
+    color: #4A4E74; 
+}
+
+
+.button-area {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 17px;    
+}
+
+.email-btn, .linkedin-btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 9px 13px 9px 11px;
+    gap: 8px;
+    width: 115px;
+    height: 34px;
+    left: 283px;
+    top: 469px;
+    background: #297FE5;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+    border-radius: 6px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+}
+
+.email-btn {
+    background: #FFFFFF;
+    border: 1px solid #D1D5DB;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+    color: #374151;
+}
+
+.linkedin-btn a {
+    color: #FFFFFF;
+}
+}
